--- a/config-file/application.properties
+++ b/config-file/application.properties
@@ -7,10 +7,8 @@ my.config.custom.property="Hello application.properties"
 
 # MySQL
 spring.datasource.url=jdbc:mysql://mysql-onetime-service:3306/bit?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver=com.mysql.cj.jdbc.driver
 spring.datasource.username=bit
 spring.datasource.password=bit
-
-
 
 jwt.expiration=3600000
